favicon 추가, 현재생활권 초안 잡기

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>안동권의 장래 생활권</title>
+  <link rel="icon" href="/static/images/favicon.png" type="image/png">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <style>
@@ -108,7 +109,7 @@
 
     /* 애니메이션 */
     @keyframes zoomOut {
-      from { transform: scale(1.4); opacity: 0; }
+      from { transform: scale(14); opacity: 0; }
       to { transform: scale(1); opacity: 1; }
     }
 
