--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/static/images/favicon.png" type="image/png">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="/static/css/index.css?v={{ css_version }}">
 </head>
 
 <body>
