--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -20,7 +20,7 @@
     <!-- Configuration (must be loaded before simulation.js) -->
     <script src="/static/js/config.js"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/static/css/simulation.css">
+    <link rel="stylesheet" href="/static/css/simulation.css?v={{ css_version }}">
 </head>
 <body class="bg-gradient-to-br from-gray-100 via-gray-50 to-blue-50 min-h-screen flex flex-col font-sans">
 
